--- a/css/style.css
+++ b/css/style.css
@@ -4,15 +4,7 @@ body {
     font-family: helvetica, arial, sans-serif;
 }
 
-body, html {
-  scrollbar-face-color: ThreeDFace !important;
-  scrollbar-shadow-color: ThreeDDarkShadow !important;
-  scrollbar-highlight-color: ThreeDHighlight !important;
-  scrollbar-3dlight-color: ThreeDLightShadow !important;
-  scrollbar-darkshadow-color: ThreeDDarkShadow !important;
-  scrollbar-track-color: Scrollbar !important;
-  scrollbar-arrow-color: ButtonText !important;
-}
+
 
 .btn-group {
   position: absolute;
@@ -31,13 +23,21 @@ body, html {
     top: 70px;
 }
 
+#time-window {
+    position: absolute;
+    right: 10px;
+    z-index: 1000;
+    color:white;
+    font-size: 15px;
+}
+
 .navibar {
   height: 70px;
   background-color: black;
 }
 
 .navibar p {
-   color: white;
+   color: #ffb400;
    font-family: 'Helvetica Neue', sans-serif;
    font-size: 45px;
    font-weight: 100;
@@ -71,6 +71,55 @@ body, html {
     width: 100%;
     position: relative;
     background-color: rgba(0,0,0,0);
+}
+
+.Flipped
+{
+    direction: rtl;
+}
+
+.covis {
+  font-size: 20px;
+  line-height: 60px;
+  color: #fff;
+  position: absolute;
+  top: 0;
+  left: 400px;
+  background-color: "black";
+  width: 100% auto;
+  border-left: 2px solid #5d5d5f;
+}
+.covis input {
+  /*margin-right: 5px;*/
+  position: relative;
+  bottom: 3px;
+  visibility: hidden;
+}
+
+.covis button {
+  color: white;
+  background-color: black;
+  border: 0;
+  font-size: 15px;
+}
+.covis input:first-of-type {
+  margin-left: 20px;
+}
+
+input[type="radio"]:checked + label {
+  color: #ffb400;
+  border-bottom: 4px solid #ffb400;
+  /*padding-bottom: 10px;*/
+}
+.covis label {
+  /*margin-right: 20px;*/
+  cursor: pointer;
+  display: inline-block;
+  margin-right: 15px;
+}
+
+.covis label:last-of-type{
+  margin-right: 0;
 }
 .sidebar {
     position: absolute;
