--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,20 @@ body {
     width: 400px;
     height: 85%;
 }
+
+#demo-controllers2 {
+    position: absolute;
+    transform: translate3d(0px, 0px, 0);
+    -webkit-transform: translate3d(0px, 0px, 0);
+    padding-top: 100px;
+    z-index: 20;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(20,20,20,0.7);
+    color:white;
+    text-align: center;
+}
+
 .carousel-inner {
     overflow-y: auto;
     width: 100%;
