--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,8 @@ body {
     z-index: 20;
     width: 400px;
     height: 85%;
+    background-color:rgba(20,20,20,0.7);
+    color:white;
 }
 
 #demo-controllers2 {
@@ -136,15 +138,13 @@ input[type="radio"]:checked + label {
   margin-right: 0;
 }
 .sidebar {
-    position: absolute;
-    left: 0px;
-    width: 340px;
-    top: 60px;
-    bottom: 0px;
-    overflow-y: auto;
-    padding: 20px;
-    padding-bottom: 60px;
-    background-color: rgba(0,0,0,1)
+  position: absolute;
+  transform: translate3d(0px, 0px, 0);
+  -webkit-transform: translate3d(0px, 0px, 0);
+  z-index: 20;
+  width: 400px;
+  height: 85%;
+  overflow: scroll;
 }
 
 .item {
