--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,26 @@ body {
     font-family: helvetica, arial, sans-serif;
 }
 
-
+#btn1 {
+    position: absolute;
+    top: 25px;
+    right: 70px;
+    padding: 13px 15px 14px 15px;
+    font: normal 15px 'Helvetica Neue', sans-serif;
+    color: blue;
+    text-align: left;
+    webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
+    -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+    border-radius: 4px;
+    border: 1px solid #999999;
+    background: white;
+    z-index: 105;
+}
 
 .btn-group {
   position: absolute;
