--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ body {
     z-index: 20;
     width: 400px;
     height: 85%;
-    background-color:rgba(20,20,20,0.7);
+    /*background-color:rgba(20,20,20,0.7);*/
     color:white;
 }
 
