--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 #btn1 {
     position: absolute;
     top: 25px;
-    right: 70px;
+    left: 440px;
     padding: 13px 15px 14px 15px;
     font: normal 15px 'Helvetica Neue', sans-serif;
     color: blue;
@@ -23,6 +23,15 @@ body {
     border: 1px solid #999999;
     background: white;
     z-index: 105;
+}
+
+#finger{
+  position: absolute;
+  top: 100px;
+  left: 460px;
+  padding: 13px 15px 14px 15px;
+  height:70px;
+  z-index: 105;
 }
 
 .btn-group {
