--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,10 @@ body {
    padding-left: 5px;
 }
 
+div.cartodb-timeslider .slider-wrapper {
+    width: 328px;
+}
+
 #carousel-controller {
     position: absolute;
     width: 100%;
