--- a/css/style.css
+++ b/css/style.css
@@ -25,12 +25,25 @@ body {
     z-index: 105;
 }
 
+.leaflet-left .leaflet-control{
+  margin-top: 30px;
+  margin-left:475px;
+}
+
+.leaflet-bar{
+  box-shadow: 0 0px 0px rgba(0,0,0,0);
+}
+
+.leaflet-draw-draw-marker{
+  width: 50px;
+}
+
 #finger{
   position: absolute;
-  top: 100px;
-  left: 460px;
+  top: 50px;
+  left: 465px;
   padding: 13px 15px 14px 15px;
-  height:70px;
+  height:50px;
   z-index: 105;
 }
 
